--- a/config_sample.env
+++ b/config_sample.env
@@ -1,61 +1,59 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+BOT_TOKEN = "5864944793:AAFOIrOG16BVsRQZsMhMpQjcsx-FpT-iIsE"
+GDRIVE_FOLDER_ID = "0ADDzz2s0O_P_Uk9PVA"
+OWNER_ID = "5668979192" 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = "18165220"
+TELEGRAM_HASH = "bd854e8f9c2996e6852545d1e95bf9d8"
 
 # OPTIONAL CONFIG
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+DATABASE_URL = "mongodb+srv://niho:niho17@niho.jyawurh.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001861419697"
+SUDO_USERS = "5663940136 5213951271 1945723944 5642567223"
+IGNORE_PENDING_REQUESTS = "False"
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://mlmirror.mlmirror.workers.dev/0:"
 STATUS_LIMIT = "2" #recommended value 2
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+ANILIST_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WAYBACK_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MEDIAINFO_ENABLED = "True"          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+SET_BOT_COMMANDS = "True" 
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/MoonLightMovies/mlm_render2"
+UPSTREAM_BRANCH = "update"
 
 #PM SUPPORT
-BOT_PM = ""
-FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
+BOT_PM = "True"
+FORCE_BOT_PM = "True"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = 
-LEECH_LOG_URL = ""
-LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
+LEECH_LOG = "-1001804903352"
+LEECH_LOG_URL = "https://t.me/+M-JD-hMQJtAxZjk1"
+LEECH_LOG_INDEXING = "True"  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = 
-MIRROR_LOG_URL = ""
-LINK_LOGS = 
+ENABLE_USR_TD = "True"  
+MIRROR_LOGS = "-1001804903352"
+MIRROR_LOG_URL = "https://t.me/+M-JD-hMQJtAxZjk1"
+LINK_LOGS = "-1001804903352"
 
 #Other
 TG_SPLIT_SIZE = ""
@@ -75,8 +73,8 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
-SERVER_PORT = ""
+BASE_URL_OF_BOT = "https://mlm-render2.onrender.com"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -94,20 +92,20 @@ YT_COOKIES_URL = ""
 NETRC_URL = ""
 
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "5mQzSDBK"
+MEGA_EMAIL_ID = "leechbot315@gmail.com"
+MEGA_PASSWORD = "MLLeech@26"
 
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
 
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "UGZJSEdFSTBkTHlhZnROQkJMcFVNdDNXT2N0aWRLWUtKVmQ2a09yMDU5TT0%3D"
 
 # UNIFIED LOGIN (AppDrive, DriveApp, GDFlix, DriveBit, DriveLinks, DriveSharer, DriveAce, DrivePro)
-UNIFIED_EMAIL = ""
-UNIFIED_PASS = ""
+UNIFIED_EMAIL = "leechbot315@gmail.com"
+UNIFIED_PASS = "LeechBot3TG3"
 
 # HUBDRIVE COOKIES
 HUBDRIVE_CRYPT = ""
@@ -119,8 +117,8 @@ KATDRIVE_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
 
 # Limits  
-TOTAL_TASKS_LIMIT = ""
-USER_TASKS_LIMIT = ""
+TOTAL_TASKS_LIMIT = "20"
+USER_TASKS_LIMIT = "20"
 STORAGE_THRESHOLD = ""
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -161,8 +159,8 @@ CAPTION_FONT = ""     # Default Caption of Leeched files, Available Options : b,
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
 START_BTN2_NAME = ""
@@ -196,55 +194,55 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
 
 
 #Mirror Related Commands
-START_COMMAND = ""      #Default is "start"
-MIRROR_COMMAND = ""     #Default is "mirror"
-ZIP_COMMAND = ""        #Default is "zipmirror"
-UNZIP_COMMAND = ""      #Default is "unzipmirror"
-CANCEL_COMMAND = ""     #Default is "cancel"
-LIST_COMMAND = ""       #Default is "list"
-SEARCH_COMMAND = ""     #Default is "search"
-STATUS_COMMAND = ""     #Default is "status"
-STATS_COMMAND = ""      #Default is "stats"
-HELP_COMMAND = ""       #Default is "help"
-CLONE_COMMAND = ""      #Default is "clone"
-COUNT_COMMAND = ""      #Default is "count"
-WATCH_COMMAND = ""      #Default is "watch"
-ZIPWATCH_COMMAND = ""   #Default is "zipwatch"
-QBMIRROR_COMMAND = ""   #Default is "qbmirror"
-QBZIP_COMMAND = ""      #Default is "qbzipmirror"
-QBUNZIP_COMMAND = ""    #Default is "qbunzipmirror"
-BTSELECT_COMMAND = ""   #Deafault is "btsel"
+START_COMMAND = "start2"      #Default is "start"
+MIRROR_COMMAND = "m2"     #Default is "mirror"
+ZIP_COMMAND = "zm2"        #Default is "zipmirror"
+UNZIP_COMMAND = "uzm2"      #Default is "unzipmirror"
+CANCEL_COMMAND = "cancel2"     #Default is "cancel"
+LIST_COMMAND = "list2"       #Default is "list"
+SEARCH_COMMAND = "search2"     #Default is "search"
+STATUS_COMMAND = "status2"     #Default is "status"
+STATS_COMMAND = "stats2"      #Default is "stats"
+HELP_COMMAND = "help2"       #Default is "help"
+CLONE_COMMAND = "clone2"      #Default is "clone"
+COUNT_COMMAND = "count2"      #Default is "count"
+WATCH_COMMAND = "w2"      #Default is "watch"
+ZIPWATCH_COMMAND = "zw2"   #Default is "zipwatch"
+QBMIRROR_COMMAND = "qm2"   #Default is "qbmirror"
+QBZIP_COMMAND = "qzm2"      #Default is "qbzipmirror"
+QBUNZIP_COMMAND = "quzm2"    #Default is "qbunzipmirror"
+BTSELECT_COMMAND = "btsel2"   #Deafault is "btsel"
 
 #Leech Related Commands
-LEECH_COMMAND = ""          #Default is "leech"
-LEECHSET_COMMAND = ""       #Default is "leechset"
-SETTHUMB_COMMAND = ""       #Default is "setthumb"
-UNZIPLEECH_COMMAND = ""     #Default is "unzipleech"
-ZIPLEECH_COMMAND = ""       #Default is "zipleech"
-QBLEECH_COMMAND = ""        #Default is "qbleech"
-QBUNZIPLEECH_COMMAND = ""   #Default is "qbunzipleech"
-QBZIPLEECH_COMMAND = ""     #Default is "qbzipleech"
-LEECHWATCH_COMMAND = ""     #Default is "leechwatch"
-LEECHZIPWATCH_COMMAND = ""  #Default is "leechzipwatch"
-PRENAME_COMMAND = ""        #Default is "prename"
-CAPTION_COMMAND = ""        #Default is "caption"
-DUMPID_COMMAND = ""         #Default is "dumpid"
+LEECH_COMMAND = "l2"          #Default is "leech"
+LEECHSET_COMMAND = "usetting2"       #Default is "leechset"
+SETTHUMB_COMMAND = "setthumb2"       #Default is "setthumb"
+UNZIPLEECH_COMMAND = "uzl2"     #Default is "unzipleech"
+ZIPLEECH_COMMAND = "zl2"       #Default is "zipleech"
+QBLEECH_COMMAND = "ql2"        #Default is "qbleech"
+QBUNZIPLEECH_COMMAND = "quzl2"   #Default is "qbunzipleech"
+QBZIPLEECH_COMMAND = "qzl2"     #Default is "qbzipleech"
+LEECHWATCH_COMMAND = "lw2"     #Default is "leechwatch"
+LEECHZIPWATCH_COMMAND = "lzw2"  #Default is "leechzipwatch"
+PRENAME_COMMAND = "prename2"        #Default is "prename"
+CAPTION_COMMAND = "caption2"        #Default is "caption"
+DUMPID_COMMAND = "dumpid2"         #Default is "dumpid"
 
 #SUDO Commands
-AUTH_COMMAND = ""           #Default is "authorize"
-UNAUTH_COMMAND = ""         #Default is "unauthorize"
-ADDSUDO_COMMAND = ""        #Default is "addsudo"
-RMSUDO_COMMAND = ""         #Default is "rmsudo"
-RESTART_COMMAND = ""        #Default is "restart"
-SPEED_COMMAND = ""          #Default is "speedtest"
-USERS_COMMAND = ""          #Default is "users"
-PAID_COMMAND = ""           #Default is "paid"
-ADDPAID_COMMAND = ""        #Default is "addpaid"
-RMPAID_COMMAND = ""         #Default is "rmpaid"
-CANCEL_ALL_COMMAND = ""     #Default is  "cancelall
-LOG_COMMAND = ""            #Default is "log"
-DELETE_COMMAND = ""         #Default is "del"
-USAGE_COMMAND = ""          #Default is "usage"
+AUTH_COMMAND = "authorize2"           #Default is "authorize"
+UNAUTH_COMMAND = "unauthorize2"         #Default is "unauthorize"
+ADDSUDO_COMMAND = "addsudo2"        #Default is "addsudo"
+RMSUDO_COMMAND = "rmsudo2"         #Default is "rmsudo"
+RESTART_COMMAND = "restart2"        #Default is "restart"
+SPEED_COMMAND = "speedtest2"          #Default is "speedtest"
+USERS_COMMAND = "users2"          #Default is "users"
+PAID_COMMAND = "paid2"           #Default is "paid"
+ADDPAID_COMMAND = "addpaid2"        #Default is "addpaid"
+RMPAID_COMMAND = "rmpaid2"         #Default is "rmpaid"
+CANCEL_ALL_COMMAND = "cancelall2"     #Default is  "cancelall
+LOG_COMMAND = "log2"            #Default is "log"
+DELETE_COMMAND = "del2"         #Default is "del"
+USAGE_COMMAND = "usage2"          #Default is "usage"
 RSSLIST_COMMAND = ""
 RSSGET_COMMAND = ""
 RSSSUB_COMMAND = ""
@@ -252,11 +250,11 @@ RSSUNSUB_COMMAND = ""
 RSSSET_COMMAND = ""
 SHELL_COMMAND = ""
 EXEHELP_COMMAND = ""
-SLEEP_COMMAND = ""          #Deafult is "sleep"
+SLEEP_COMMAND = "sleep2"          #Deafult is "sleep"
 
 #EXTRA COMMANDS
-PING_COMMAND = ""           #Default is "ping"
-SPEEDTEST_COMMAND = ""      #Default is "speedtest"
-MEDIAINFO_COMMAND = ""      #Default is "mediainfo"
-HASH_COMMAND = ""           #Default is "hash"
-WAYBACK_COMMAND = ""        #Default is "wayback"
+PING_COMMAND = "ping2"           #Default is "ping"
+SPEEDTEST_COMMAND = "speedtest2"      #Default is "speedtest"
+MEDIAINFO_COMMAND = "mediainfo2"      #Default is "mediainfo"
+HASH_COMMAND = "hash2"           #Default is "hash"
+WAYBACK_COMMAND = "wayback2"        #Default is "wayback"
