--- a/config.env
+++ b/config.env
@@ -225,6 +225,7 @@ QBZIPLEECH_COMMAND = "qzl2"     #Default is "qbzipleech"
 LEECHWATCH_COMMAND = "lw2"     #Default is "leechwatch"
 LEECHZIPWATCH_COMMAND = "lzw2"  #Default is "leechzipwatch"
 PRENAME_COMMAND = "prename2"        #Default is "prename"
+REMNAME_COMMAND = "remname2"        #Default is "remname"
 CAPTION_COMMAND = "caption2"        #Default is "caption"
 DUMPID_COMMAND = "dumpid2"         #Default is "dumpid"
 
